--- a/templates/artist.html
+++ b/templates/artist.html
@@ -142,7 +142,7 @@
     {% if similar_songs %}
     <div id="similar_songs" class="column bbb">
         <div class="title header">
-            Similar Songs
+            Recommended Songs
         </div>
 
         <ol>
@@ -155,7 +155,7 @@
 
         {% if similar_songs.next %}
             <div class="title header">
-                <a href = "similar/?type=songs&page=1" >view more</a>
+                <a href = "similar/?type=songs" >view more</a>
             </div>
         {% endif %}
 
