all templates added and linked

--- a/templates/artist-songs.html
+++ b/templates/artist-songs.html
@@ -60,7 +60,7 @@
 
         <span id="profile.name">
             {% if profile.name %}
-                / <a href = "/music/{{ profile.name }}">{{ profile.name }}</a>
+                / <a href = "/music/{{ profile.name|space_to_plus }}">{{ profile.name }}</a>
             {% endif %}
         </span>
     </div>
