--- a/templates/artist.html
+++ b/templates/artist.html
@@ -73,12 +73,6 @@
             {% endfor %}
         </div>
     </div>
-    
-    <div class="subtitle">
-        <div id="profile-genres" >
-
-        </div>
-    </div>
 
     <hr>
 
@@ -108,8 +102,7 @@
 
     </div>
 
-    {% if songs %}
-    <div id="songs" class="column bbb">
+    <div class="column bbb">
         <div class="title header">
             Songs
         </div>
@@ -129,7 +122,6 @@
         {% endif %}
 
     </div>
-    {% endif %}
 
     {% if similar_songs %}
     <div id="similar_songs" class="column bbb">
